# table

./: Cargo.toml  README.md  aus-energy-2020.csv  benches.rs
.github/workflows/: rust.yml
src/: entry.rs  lib.rs  lib.rs.bak  parsing.rs  tests.rs
