[package]
name = "table"
version = "0.1.0"
authors = ["kurt <kurtlawrence92@gmail.com>"]
edition = "2021"

[dependencies]
# kdr-aus git
divvy = { git = "https://github.com/kdr-aus/divvy" }
kserd = { git = "https://github.com/kurtlawrence/kserd" }

# crates.io
rayon = "1"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "benches"
path = "benches.rs"
harness = false
